[package]
name = "fast-slic-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ondřej Soukeník"]
repository = "https://github.com/ondrasouk/fast-slic-rust"
homepage = "https://github.com/ondrasouk/fast-slic-rust"
description = "FastSLIC implementation written in Rust"
rust-version = "1.73.0"
license = "MIT"

[dependencies]
gcdx = "0.1.8"
static_init = "1.0.3"
aligned-vec = "0.5.0"
multiversion = "0.7.4"
rayon = "1.10.0"
assume = "0.5.0"

[dev-dependencies]
criterion = "0.5.1"
image = "0.25.1"
sas = "0.1.3"

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[profile.profiling]
inherits = "release"
debug = true
